--- a/helm-install.yml
+++ b/helm-install.yml
@@ -1,12 +1,11 @@
-- name: Install helm chart
-  helm:
-    host: localhost
-    chart:
-      name: {{chart_name}}
-      version: {{version}}
-      source:
-        type: repo
-        location: https://kubernetes-charts.storage.googleapis.com
-    state: installed
-    name: my-memcached
-    namespace: default
+---
+- hosts: all
+  tasks:
+  - name: Execute helm command
+    command: helm list
+    register: out1
+  - debug: var=out1.stdout_lines
+- name: Execute helm command
+  command: helm install stable/{{chart_name}} --namespace {{namespace}}
+  register: out1
+- debug: var=out1.stdout_lines
