--- a/helm-install.yml
+++ b/helm-install.yml
@@ -1,11 +1,16 @@
----
-- hosts: all
-  tasks:
-  - name: Execute helm command
-    command: helm list
-    register: out1
-  - debug: var=out1.stdout_lines
-- name: Execute helm command
-  command: helm install stable/{{chart_name}} --namespace {{namespace}}
+--- 
+- 
+  hosts: all
+  tasks: 
+    - 
+      command: "helm list"
+      name: "Execute helm command"
+      register: out1
+    - 
+      debug: var=out1.stdout_lines
+- 
+  command: "helm install stable/{{chart_name}} --namespace {{namespace}}"
+  name: "Execute helm command"
   register: out1
-- debug: var=out1.stdout_lines
+- 
+  debug: var=out1.stdout_lines
